crates/fossil-codegen/tests/snapshots/triple_emit_with_graph.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW users AS
SELECT * FROM read_csv_auto('examples/users.csv', sample_size=-1);
COPY (
    SELECT
        'https://example.org/' || users.id AS subject,
        'https://example.org/name' AS predicate,
        users.name AS object
    FROM users
) TO 'output.parquet' (FORMAT PARQUET);
