crates/fossil-codegen/tests/snapshots/union_two_sources.snap
---
source: crates/fossil-codegen/tests/corpus.rs
expression: sql_for(idx)
---
CREATE VIEW a AS
SELECT * FROM read_csv_auto('examples/a.csv', sample_size=-1);
CREATE VIEW b AS
SELECT * FROM read_csv_auto('examples/b.csv', sample_size=-1);
COPY (
    SELECT
        step_2.iri AS subject,
        'https://example.org/name' AS predicate,
        step_2.name AS object
    FROM (SELECT * FROM a UNION SELECT * FROM b) AS step_2
) TO 'output.parquet' (FORMAT PARQUET);
